<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:title="@string/dark_mode_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/list_header">

        <EditTextPreference
            app:key="anilist"
            app:title="@string/anilist_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="mal"
            app:title="@string/mal_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/song_list"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">

    </PreferenceCategory>

</PreferenceScreen>