<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="steven.li.pocketanimemusic.ui.List.MyListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_play"
        android:name="steven.li.pocketanimemusic.ui.Play.MusicPlayerFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_music_player" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="steven.li.pocketanimemusic.ui.Browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />
</navigation>